# cli

./: install.sh  pyproject.toml
nork/: __init__.py  __main__.py  main.py
nork/cli/: application.py
nork/commands/: Install.py  Os.py
nork/framework/: application.py
nork/framework/server/: __init__.py
tests/: test_nork.py
